// Copyright 2015 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package helloworld;

// The greeting service definition.
service Greeter {
  // SayHello greets a user.
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// HelloRequest contains the user's name.
message HelloRequest {
  // Name is the name of the person to greet.
  string name = 1;
}

// HelloReply contains a greeting.
message HelloReply {
  // Message is the greeting text.
  string message = 1;
}
